fix:fixed homepage and teams page dark mode issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,7 +61,7 @@ html[data-theme="dark"] .docusaurus-highlight-code-line {
 
   .section-title {
     @apply text-heading1 mb-[64px];
-    @apply text-primary-800 font-semibold;
+    @apply text-primary-500 font-semibold;
     @apply sm:text-heading3;
     @apply mobile:mb-4 sm:mt-3 sm:mb-[36px];
   }
